# ci_exps

./: README.md  azure-pipelines.yml
example_project/: pyproject.toml
example_project/example_pack/: foobar.py
example_project/tests/: test_foobar.py
